# pi_kid_voice_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
deploy/systemd/: pi-kid-voice-bot.service
scripts/: install_systemd_service.sh
src/pi_kid_voice_bot/: __init__.py  audio_adapters.py  llm_engine.py  main.py  voice_runtime.py
tests/: test_audio_adapters.py  test_llm_engine.py  test_main.py  test_voice_runtime.py
